// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render two column grid 1`] = `
<div>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root gridItem MuiGrid-container MuiGrid-spacing-xs-10 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root column labelColumn MuiGrid-item MuiGrid-grid-xs-2"
          data-testid="two-column-row-label"
        >
          <p
            class="MuiTypography-root rowLabel makeStyles-label-104 makeStyles-label-106 MuiTypography-body1"
            data-testid="test-label-1-label"
          >
            Test Label 1
          </p>
        </div>
        <div
          class="MuiGrid-root column MuiGrid-item MuiGrid-grid-xs-10"
          data-testid="two-column-row-value"
        >
          <div
            class="value"
            data-testid="test-label-1-value"
          >
            Test Value 1
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root gridItem MuiGrid-container MuiGrid-spacing-xs-10 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root column labelColumn MuiGrid-item MuiGrid-grid-xs-2"
          data-testid="two-column-row-label"
        >
          <div
            class="rowLabel makeStyles-label-104 makeStyles-label-138"
            data-testid="row-1-label"
          >
            1
          </div>
        </div>
        <div
          class="MuiGrid-root column MuiGrid-item MuiGrid-grid-xs-10"
          data-testid="two-column-row-value"
        >
          <div
            class="value"
            data-testid="row-1-value"
          >
            Test Value 1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render two column grid 2`] = `
<div>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root gridItem MuiGrid-container MuiGrid-spacing-xs-10 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root column labelColumn MuiGrid-item MuiGrid-grid-xs-2"
          data-testid="two-column-row-label"
        >
          <p
            class="MuiTypography-root rowLabel makeStyles-label-243 makeStyles-label-245 MuiTypography-body1"
            data-testid="test-label-1-label"
          >
            Test Label 1
          </p>
        </div>
        <div
          class="MuiGrid-root column MuiGrid-item MuiGrid-grid-xs-10"
          data-testid="two-column-row-value"
        >
          <div
            class="value"
            data-testid="test-label-1-value"
          >
            Test Value 1
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root gridItem MuiGrid-container MuiGrid-spacing-xs-10 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root column labelColumn MuiGrid-item MuiGrid-grid-xs-2"
          data-testid="two-column-row-label"
        >
          <div
            class="rowLabel makeStyles-label-243 makeStyles-label-277"
            data-testid="row-1-label"
          >
            1
          </div>
        </div>
        <div
          class="MuiGrid-root column MuiGrid-item MuiGrid-grid-xs-10"
          data-testid="two-column-row-value"
        >
          <div
            class="value"
            data-testid="row-1-value"
          >
            Test Value 1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render two column grid 3`] = `
<div>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root gridItem MuiGrid-container MuiGrid-spacing-xs-10 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root column labelColumn MuiGrid-item MuiGrid-grid-xs-2"
          data-testid="two-column-row-label"
        >
          <p
            class="MuiTypography-root rowLabel makeStyles-label-382 makeStyles-label-384 MuiTypography-body1"
            data-testid="test-label-1-label"
          >
            Test Label 1
          </p>
        </div>
        <div
          class="MuiGrid-root column MuiGrid-item MuiGrid-grid-xs-10"
          data-testid="two-column-row-value"
        >
          <div
            class="value"
            data-testid="test-label-1-value"
          >
            Test Value 1
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root gridItem MuiGrid-container MuiGrid-spacing-xs-10 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root column labelColumn MuiGrid-item MuiGrid-grid-xs-2"
          data-testid="two-column-row-label"
        >
          <div
            class="rowLabel makeStyles-label-382 makeStyles-label-416"
            data-testid="row-1-label"
          >
            1
          </div>
        </div>
        <div
          class="MuiGrid-root column MuiGrid-item MuiGrid-grid-xs-10"
          data-testid="two-column-row-value"
        >
          <div
            class="value"
            data-testid="row-1-value"
          >
            Test Value 1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
